[build-system]
requires = [
    "aiohttp>=3.8.1",
    "aiosignal>=1.2.0",
    "async-timeout>=4.0.2",
    "attrs>=21.4.0",
    "bidict>=0.22.0",
    "charset-normalizer>=2.0.12",
    "frozenlist>=1.3.0",
    "idna>=3.3",
    "igraph>=0.9.10",
    "multidict>=6.0.2",
    "python-engineio>=4.3.2",
    "setuptools>=58.1.0",
    "texttable>=1.6.4",
    "ujson>=5.2.0",
    "yarl>=1.7.2"
]
build-backend = "setuptools.build_meta"