[metadata]
name = ALPC
version = 0.4.0
author = Storm Cassidy
description = A python client for AdventureLand.
license = GNU General Public License v3 (GPLv3)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StormSurge95/ALPC
project_urls =
    Bug Tracker = https://github.com/StormSurge95/ALPC/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = source
packages = find:
python_requires = >=3.10.4

[options.packages.find]
where = source